--- a/thesis.tex
+++ b/thesis.tex
@@ -86,11 +86,11 @@ pdftitle={RG},%
 % 英語タイトル
 \def\etitle{\LaTeX Template for RG 2019}
 % 著者(日本語)
-\def\author{阿部涼介}
+\def\author{三澤龍大}
 % 著者(英語)
 \def\eauthor{Ryosuke Abe}
 % 学部・研究科
-\def\dept{慶應義塾大学大学院 政策・メディア研究科}
+\def\dept{慶應義塾大学 環境情報学部}
 % 学部・研究科(英語)
 \def\edept{Keio University Graduate School of Media and Governance}
 
